syntax = "proto3";

package note_v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/evgeniy-lipich/microservice_go/week_3/config/pkg/note_v1;note_v1";

service NoteV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

// Note - содержимое
message Note {
  int64 id = 1;
  NoteInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// NoteInfo - создание
message NoteInfo{
  string title = 1;
  string content = 2;
  string author = 3;
  bool is_public = 4;
}

// UpdateNoteInfo - обновление
message UpdateNoteInfo{
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue content = 2;
  google.protobuf.StringValue author = 3;
  google.protobuf.BoolValue is_public = 4;
}

// CreateRequest
message CreateRequest{
  NoteInfo info = 1;
}

// CreateResponse
message CreateResponse{
  int64 id = 1;
}

// GetRequest
message GetRequest{
  int64 id = 1;
}

// GetResponse
message GetResponse{
  Note note = 1;
}

// ListRequest
message ListRequest{
  int64 limit = 1;
  int64 offset = 2;
}

// ListResponse
message ListResponse{
  repeated Note notes = 1;
}

// UpdateRequest
message UpdateRequest{
  int64 id = 1;
  UpdateNoteInfo info = 2;
}

// DeleteRequest
message DeleteRequest{
  int64 id = 1;
}